# dinamic-gemini

./: .env.example  .gitignore  .watchmanconfig  ACTIVATE_VENV.md  GUIA_USO_OPTIMO.md  PLAN_IMPLEMENTACION.md  README.md  REPO_STRUCTURE.md  SETUP.md  Sprint 5 - Gemini.md  Sprint 6 - Gemini.md  activate.sh  dev.sh  env.example.txt  implementation-corrections-diff.txt  implementation-corrections-diffstat.txt  implementation-corrections-status.txt  legacy-processing-audit.md  legacy-processing-cleanup-diff.txt  legacy-processing-cleanup-diffstat.txt  legacy-processing-cleanup-status.txt  legacy-processing-usage-report.txt  package-lock.json  package.json  pyproject.toml  pytest.ini
backend/: .dockerignore  .env.test.example  Dockerfile  Dockerfile.worker  README.md  docker-compose.override.example.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/audit/phase-e/: e6-closure.md  e6-readonly-traceability-audit.md  e7-final-closure.md  e7-final-readonly-audit.md
backend/docs/: aisle-identification-mode-phase1.md  aisle-identification-mode-phase2.md  aisle-identification-mode-phase3-corrections.md  aisle-identification-mode-phase3.md  aisle-identification-mode-phase4.md  aisle-identification-mode-phase5.md  aisle-identification-mode-phase6.md  aisle-identification-mode-phase7.md  b8_closing_review.md  b8_code_smells_plan.md  b8_final_audit.md  export-v3.md  legacy-processing-retirement-audit.md  processing-event-observability.md
backend/docs/legacy/: legacy-processing-removal-plan.md  legacy-processing-usage-report.txt
backend/docs/sql/: legacy_processing_usage_report.sql
backend/scripts/: __init__.py  analyze_legacy_reference_migration.py  check_deploy_secrets.sh  check_migration_presence.py  clean_local_business_data.py  client_oriented_drift_report.py  create_aruco.py  db_migrate.py  debug_artifact_publication.py  dev_deploy_db_migrate.sh  legacy_reference_migration_classifier.py  patch_compose_host_port.py  report_v3_route_repository_usage.py  test_check_deploy_secrets_static.sh  test_dev_deploy_db_migrate_static.sh  validate_deploy_compose_patch.sh
backend/src/: app.py  backfill_inventory_status.py  backfill_legacy_aisles.py  backfill_legacy_client_supplier_defaults.py  config.py
backend/src/api/: __init__.py  dependencies.py  photos_handler.py  schema_guard.py  server.py
backend/src/application/: __init__.py  errors.py
backend/src/auth/: __init__.py  config.py  dependencies.py  errors.py  routes.py  schemas.py  security.py  service.py
backend/src/consolidate/: consolidate.py  normalize.py
backend/src/database/: __init__.py  repository.py  schema.sql  sqlserver.py  sqlserver_business_data_cleanup.py
backend/src/decision/: count_status.py  entity_order.py  pallet_id.py  processing_mode.py
backend/src/detection/: __init__.py  heuristic_detector.py  pallet_detector.py
backend/src/domain/: __init__.py  entity.py  execution_image_manifest.py  global_prompt_config.py  manifest_evidence_resolution.py  pallet.py  prompt_image_projection.py  traceability.py
backend/src/env_settings/: grouped_settings.py  parsing.py  pipeline_analysis_execution_strings.py  sqlserver_pytest_policy.py  sqlserver_resolution.py
backend/src/evidence/: evidence_pack.py  scoring.py
backend/src/exceptions/: global_analysis_exceptions.py
backend/src/fallback/: fallback_policy.py  visual_fallback_analyzer.py
backend/src/frames/: __init__.py  normalize.py  types.py
backend/src/io/: logging.py  outputs.py  sanitize.py
backend/src/jobs/: __init__.py  artifact_publication_worker.py  dev_reset_local_jobs.py  image_identity.py  job_store.py  models.py  preliminary_reconciliation_worker.py  queue.py  run_worker.py  run_worker_dev.py  worker.py  worker_bootstrap.py
backend/src/legacy/: __init__.py  persistence_observability.py
backend/src/llm/: anthropic_final_image_validation.py  anthropic_sdk_adapter.py  costing.py  deepseek_sdk_adapter.py  errors.py  gemini_client.py  gemini_global_analyzer.py  gemini_sdk_adapter.py  multimodal_image_normalization.py  openai_sdk_adapter.py  prompts.py  provider_error_taxonomy.py  response_trace.py  schema_versions.py  types.py  vision_multimodal_payload.py
backend/src/models/: schemas.py
backend/src/parsing/: global_analysis_parser.py
backend/src/pipeline/: __init__.py  errors.py  execution_log.py  execution_log_sanitizer.py  hybrid_inventory_pipeline.py  llm_metadata_json_safety.py  provider_keys.py  run_metadata.py  secret_redaction.py
backend/src/preprocess/: image_ops.py  selectors.py  similarity.py
backend/src/reid/: __init__.py  clip_embedder.py  gating.py  merge.py  phash.py  signature.py
backend/src/reporting/: artifacts.py  hybrid_report.py  supplier_traceability.py
backend/src/review/: review_merge.py  review_store.py
backend/src/roi/: __init__.py  cropper.py  quality.py
backend/src/runtime/: __init__.py  app_container.py  v3_deps.py
backend/src/tools/: __init__.py  supplier_reference_image_audit.py
backend/src/tracking/: track_builder.py  tracker.py
backend/stubs/: pillow_heif.pyi  pyodbc.pyi
backend/tests/: conftest.py  test_artifact_storage_config.py  test_baseline_pipeline_smoke.py  test_config.py  test_config_sqlserver_resolution.py  test_consolidate.py  test_e2e_v2_2.py  test_epic_3_1_a.py  test_epic_3_1_b.py  test_epic_3_1_c.py  test_epic_3_1_d.py  test_epic_5.py  test_evidence.py  test_execution_log.py  test_frames_2_2_b.py  test_gemini_analysis_provider_phase4.py  test_gemini_client.py  test_hybrid_global_analysis_strategy_phase4.py  test_io.py  test_patch_compose_host_port.py  test_preprocess.py  test_reid.py  test_schemas.py  test_selector.py  test_sqlserver_pytest_policy.py  test_stage1_core_refactor.py  test_stage2_single_call_hybrid.py  test_stage3_validation.py  test_stage4_operational_integration.py  test_stage5_frame_selection.py  test_stage6_fallback.py  test_stage8_db.py  test_stage_2_1_a.py  test_stage_2_1_e.py  test_stage_2_2_c.py  test_stage_2_2_d_llm_provider.py  test_stage_a_components.py  test_stage_b_ports_adapters.py  test_stage_c_stages.py  test_tracker.py  (+1 more)
(+3078 files in other folders)
