[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dinamic-gemini"
version = "0.1.0"
description = "Sistema de conteo de inventario por video usando Gemini API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Dinamic Systems", email = "info@dinamic.com"}
]
keywords = ["inventory", "video", "gemini", "computer-vision", "logistics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
    "opencv-python>=4.8.0",
    "google-genai>=0.2.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "pillow-heif>=0.21.0",
    "imagehash>=4.3.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "python-multipart>=0.0.6",
    "pyodbc>=5.0.0",
    # v3.2.1 auth core (Phase 2)
    "passlib>=1.7.4",
    "bcrypt>=4.0.0",
    "PyJWT>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
dinamic-gemini = "src.app:main"
dinamic-db-migrate = "src.database.migrations.cli:main"

[tool.setuptools]
packages = [
    "src",
    "src.models",
    "src.video",
    "src.preprocess",
    "src.llm",
    "src.consolidate",
    "src.io",
    "src.detection",
    "src.tracking",
    "src.roi",
    "src.view_selection",
    "src.reid",
    "src.pipeline",
    "src.api",
    "src.api.schemas",
    "src.api.routes",
    "src.database",
    "src.database.migrations",
    "src.jobs",
]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.sql"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
# When running from repo root via root pytest.ini, pythonpath is set there.

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
