[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dinamic-gemini"
version = "0.1.0"
description = "Sistema de conteo de inventario por video usando Gemini API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Dinamic Systems", email = "info@dinamic.com"}
]
keywords = ["inventory", "video", "gemini", "computer-vision", "logistics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
    "opencv-python>=4.8.0",
    "google-cloud-storage>=2.14.0",
    "google-genai>=0.2.0",
    "openai>=1.40.0",
    "anthropic>=0.75.0",
    "python-dotenv>=1.2.2; python_version>='3.10'",
    "python-dotenv>=1.2.1; python_version<'3.10'",
    "numpy>=1.24.0",
    "pillow>=12.2.0; python_version>='3.10'",
    "pillow>=10.0.0; python_version<'3.10'",
    "pillow-heif>=0.21.0",
    "imagehash>=4.3.0",
    "fastapi>=0.100.0",
    "starlette>=1.3.1; python_version>='3.10'",
    "uvicorn[standard]>=0.22.0",
    "python-multipart>=0.0.31; python_version>='3.10'",
    "python-multipart>=0.0.6; python_version<'3.10'",
    "pyodbc>=5.0.0",
    # v3.2.1 auth core (Phase 2)
    "passlib>=1.7.4",
    "bcrypt>=4.0.0",
    "PyJWT>=2.13.0",
    "urllib3>=2.7.0",
    "requests>=2.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-passlib",
    "boto3-stubs[s3]>=1.35.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
    "radon>=6.0.1",
    "pylint>=3.2.0",
    "vulture>=2.11",
    "grimp>=3.5",
    "import-linter>=2.0",
]

[project.scripts]
dinamic-gemini = "src.app:main"
dinamic-db-migrate = "src.database.migrations.cli:main"

[tool.setuptools]
packages = [
    "src",
    "src.models",
    "src.video",
    "src.preprocess",
    "src.llm",
    "src.consolidate",
    "src.io",
    "src.detection",
    "src.tracking",
    "src.roi",
    "src.view_selection",
    "src.reid",
    "src.pipeline",
    "src.api",
    "src.api.schemas",
    "src.api.routes",
    "src.database",
    "src.database.migrations",
    "src.jobs",
]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.sql"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Phase C3: deferred imports inside builder closures trigger isort's I001; order is intentional.
"src/runtime/container/repository_builders.py" = ["I001"]
"src/runtime/container/label_builders.py" = ["I001"]
"src/runtime/container/analytics_builders.py" = ["I001"]
"src/runtime/container/capture_session_builders.py" = ["I001"]
"src/runtime/container/service_builders.py" = ["I001"]
"src/runtime/container/storage_builders.py" = ["I001"]
"src/runtime/container/use_case_builders.py" = ["I001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
# When running from repo root via root pytest.ini, pythonpath is set there.

[tool.mypy]
# Align with runtime features used in-tree (PEP 604 unions, dataclass kw_only, etc.).
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
# Local PEP 561-style stubs for packages without py.typed (see stubs/).
mypy_path = "stubs"
